2002-09-28  Markus Germeier  <mager@tzi.de>

	* kernel/Makefile.am (distclean): added target distclean

2002-09-28  Markus Germeier  <mager@tzi.de>
	* a lot of changes!
	* reading from external memory should work now correctly
	* BEWARE: all write operations are still broken on external mem!

2002-09-24  Markus Germeier  <mager@tzi.de>
	* libmpio/directory.c (mpio_dentry_put): fixed 8.3 handling
	  to allow correct writing of CONFIG.DAT
	  (mpio_dentry_find_name_8_3): fixed handling of given filename
	* libmpio/mpio.c (mpio_file_del, mpio_file_get): 
	  system files (like sysdum?.du?) can now be read and deleted
	  (mpio_file_put): use mpio_filetype_t to tag files which are
	  written to the internal memory (it is now possible to write
	  config files back to the player)

2002-09-24  Markus Germeier  <mager@tzi.de>
	* a lot of little changes and updates
	* mpiosh/callback.c (mpiosh_cmd_dump_mem): 
	  renamed function from debug_memory to dump_memory
	  (mpiosh_callback_init): display progress of internal and
	  external memory
	* libmpio/mpio.c (mpio_check_filename): added function
	  to check for string zero termination (more to check??)
	  (mpio_memory_dump): dump all relevant memory areas
	  (mpio_init): read spare area for external memory
	* libmpio/defs.h: added mpio_callback_t, mpio_callback_init_t
	  and mpio_filename_t

2002-09-22  Andreas Buesching  <crunchy@tzi.de>

	* configure.in (SPEC_PATH): needed for the spec file to find the
	kernel module

2002-09-22  Markus Germeier  <mager@tzi.de>
	* mpiosh/callback.c (mpiosh_cmd_mdel): 
	  fixed logical error in abort handling which corrupted
	  FAT and directory
	  (mpiosh_cmd_mget): call the correct callback function
	  (mpiosh_callback_put): introduced mpiosh_cancel_ack
	  to fix annoying displays in case of an abort
	  (mpiosh_cmd_mput): don't break mput if an FILE_EXITS
	  is encountered

2002-09-21  Andreas Buesching  <crunchy@tzi.de>

	* mpio.spec.in (CFLAGS): add 'depmod -a' call to post install